--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wbpack Exercise</title>
-    <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <main class="container">
-    <h1>Leaderboard</h1>
+    <h1 class="main-title">Leaderboard</h1>
     <section class="leaderboard">
       <div class="scores">
         <header class="score-header">
           <h2 class="score-title">Recent scores</h2>
           <button>Refresh</button>
         </header>
-        
+        <ul class="table">
+          <li class="table-row">
+            <span class="table-cell">Name: 100</span>
+          </li>
+          <li class="table-row">
+            <span class="table-cell">Name: 53</span>
+          </li>
+          <li class="table-row">
+            <span class="table-cell">Name: 24</span>
+          </li>
+          <li class="table-row">
+            <span class="table-cell">Name: 66</span>
+          </li>
+          <li class="table-row">
+            <span class="table-cell">Name: 87</span>
+          </li>
+          <li class="table-row">
+            <span class="table-cell">Name: 323</span>
+          </li>
+        </ul>
       </div>
       <div class="scores">
         <header class="score-header">
