Add form input for scores

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,13 @@
         <header class="score-header">
           <h2 class="score-title">Add your score</h2>
         </header>
-        
+        <form id="scoreContent">
+          <div class="form-content">
+            <input type="text" id="name" placeholder="Your name" required>
+            <input type="text" id="score" placeholder="Your score" required>
+            <button type="submit" id="btnAddBook">Submit</button>
+          </div>
+        </form>
       </div>
     </section>    
   </main>
