--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <div class="scores">
         <header class="score-header">
           <h2 class="score-title">Recent scores</h2>
-          <button>Refresh</button>
+          <button type="button">Refresh</button>
         </header>
         <ul class="table">
           <li class="table-row">
